[package]
name = "kvs"
version = "0.1.0"
authors = ["dust1 <834902408@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.39"
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }